Added Elastic search for filename and id instead of db search